# webrtc-windows

./: .gitmodules
org/webrtc/wrapper/: Delegates.h  Media.cc  Media.h  MediaSourceHelper.cc  MediaSourceHelper.h  PeerConnectionInterface.cc  PeerConnectionInterface.h  RTMediaStreamSource.cc  RTMediaStreamSource.h  WebRtcMediaSource.cc  WebRtcMediaSource.h  WebRtcMediaStream.cc
projects/msvc/Org.WebRtc.Uwp/: Org.WebRtc.Uwp.vcxproj
projects/msvc/WebRtc.UWP.Native.Builder/: WebRtc.UWP.Native.Builder.vcxproj
solutions/: WebRtc.sln
templates/gns/: args.gn
